--- a/mandelbulber2/formula/ui/amazing_surf_mod3.ui
+++ b/mandelbulber2/formula/ui/amazing_surf_mod3.ui
@@ -484,7 +484,21 @@
        <property name="topMargin">
         <number>5</number>
        </property>
-       <item row="3" column="3">
+       <item row="2" column="3">
+        <widget class="MyCheckBox" name="checkBox_transf_function_enabledAz_false">
+         <property name="text">
+          <string>Slot 3</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="2">
+        <widget class="MyCheckBox" name="checkBox_transf_function_enabledAy_false">
+         <property name="text">
+          <string>Slot 2</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="3">
         <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_C">
          <property name="enabled">
           <bool>false</bool>
@@ -500,15 +514,22 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="3">
-        <widget class="MyCheckBox" name="checkBox_transf_function_enabledAz_false">
+       <item row="6" column="0">
+        <widget class="QLabel" name="label_14">
          <property name="text">
-          <string>Slot 3</string>
+          <string>Stop at iteration:</string>
          </property>
         </widget>
        </item>
-       <item row="5" column="1">
-        <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_A">
+       <item row="3" column="0">
+        <widget class="QLabel" name="label_10">
+         <property name="text">
+          <string>Order of Fold Types:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="2">
+        <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_B">
          <property name="enabled">
           <bool>false</bool>
          </property>
@@ -523,14 +544,7 @@
          </property>
         </widget>
        </item>
-       <item row="3" column="0">
-        <widget class="QLabel" name="label_13">
-         <property name="text">
-          <string>Start at iteration:</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="1">
+       <item row="4" column="1">
         <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_A">
          <property name="enabled">
           <bool>false</bool>
@@ -546,14 +560,7 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="2">
-        <widget class="MyCheckBox" name="checkBox_transf_function_enabledAy_false">
-         <property name="text">
-          <string>Slot 2</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="3">
+       <item row="3" column="3">
         <widget class="MyComboBox" name="comboBox_aSurf3Folds_order_of_folds_3">
          <property name="enabled">
           <bool>false</bool>
@@ -575,45 +582,22 @@
          </item>
         </widget>
        </item>
-       <item row="1" column="0">
-        <widget class="QLabel" name="label_7">
+       <item row="4" column="0">
+        <widget class="QLabel" name="label_13">
          <property name="text">
-          <string>Enable slot sequence:</string>
+          <string>Start at iteration:</string>
          </property>
         </widget>
        </item>
-       <item row="5" column="2">
-        <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_B">
-         <property name="enabled">
-          <bool>false</bool>
-         </property>
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="maximum">
-          <number>250</number>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="0">
-        <widget class="QLabel" name="label_14">
-         <property name="text">
-          <string>Stop at iteration:</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
+       <item row="2" column="1">
         <widget class="MyCheckBox" name="checkBox_transf_function_enabledAx">
          <property name="text">
           <string>Slot 1</string>
          </property>
         </widget>
        </item>
-       <item row="5" column="3">
-        <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_C">
+       <item row="6" column="1">
+        <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_A">
          <property name="enabled">
           <bool>false</bool>
          </property>
@@ -628,29 +612,7 @@
          </property>
         </widget>
        </item>
-       <item row="2" column="2">
-        <widget class="MyComboBox" name="comboBox_aSurf3Folds_order_of_folds_2">
-         <property name="enabled">
-          <bool>false</bool>
-         </property>
-         <item>
-          <property name="text">
-           <string>Type 1</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Type 2</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Type 3</string>
-          </property>
-         </item>
-        </widget>
-       </item>
-       <item row="2" column="1">
+       <item row="3" column="1">
         <widget class="MyComboBox" name="comboBox_aSurf3Folds_order_of_folds_1">
          <property name="enabled">
           <bool>false</bool>
@@ -672,8 +634,8 @@
          </item>
         </widget>
        </item>
-       <item row="3" column="2">
-        <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_B">
+       <item row="6" column="2">
+        <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_B">
          <property name="enabled">
           <bool>false</bool>
          </property>
@@ -688,10 +650,41 @@
          </property>
         </widget>
        </item>
-       <item row="2" column="0">
-        <widget class="QLabel" name="label_10">
-         <property name="text">
-          <string>Order of Fold Types:</string>
+       <item row="3" column="2">
+        <widget class="MyComboBox" name="comboBox_aSurf3Folds_order_of_folds_2">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <item>
+          <property name="text">
+           <string>Type 1</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Type 2</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Type 3</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item row="6" column="3">
+        <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_C">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="maximum">
+          <number>250</number>
          </property>
         </widget>
        </item>
@@ -705,6 +698,20 @@
          </property>
          <property name="text">
           <string>Slot, Fold Type and Iteration controls</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="label_7">
+         <property name="text">
+          <string>Enable slot sequence:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0" colspan="4">
+        <widget class="QLabel" name="label_9">
+         <property name="text">
+          <string>Fold Type must be enabled above.</string>
          </property>
         </widget>
        </item>
